--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Multi Color Template</title>
-<meta name="keywords" content="free css layout, Multi Color Template, HTML page" />
-<meta name="description" content="Multi Color - free CSS template provided by templatemo.com for everyone." />
-<link href="static/templatemo_style.css" rel="stylesheet" type="text/css" />
+<title>Jason and Paul's Wedding</title>
+<meta name="keywords" content="Paul, Nichols, Jason, Olsen, Nicholsen, Wedding," />
+<meta name="description" content="Personal website for the Nicholsen big gay wedding" />
+<link href="/static/templatemo_style.css" rel="stylesheet" type="text/css" />
 
 <script language="javascript" type="text/javascript">
 function clearText(field)
@@ -22,10 +22,7 @@ function clearText(field)
 <div id="templatemo_wrapper">
 
     <div id="templatemo_header">
-    
-        <div id="site_title">
-            <h1><a href="http://www.templatemo.com" target="_parent">Free CSS Template</a></h1>
-        </div> <!-- end of site_title -->
+
         
         <div id="search_box">
             <form action="#" method="get">
@@ -40,28 +37,27 @@ function clearText(field)
   
     <ul>
           <li><a href="#" class="current">Home</a></li>
-          <li><a href="http://www.templatemo.com/page/1" target="_parent">Web Templates</a></li>
-          <li><a href="http://www.flashmo.com/page/1" target="_parent">Flash Galleries</a></li>
-          <li><a href="#">Company</a></li>
-          <li><a href="#" class="last">Contact</a></li>
+          <li><a href="http://www.templatemo.com/page/1" target="_parent">About Us</a></li>
+          <li><a href="http://www.flashmo.com/page/1" target="_parent">Wedding Day</a></li>
+          <li><a href="#">Guest Info</a></li>
+          <li><a href="#" class="last">Contact Us</a></li>
     </ul>   
      	
-        <div id="login">
+<!--         <div id="login">
             <a href="#">Login</a> or <a href="#">Register</a>
-        </div>
+        </div> -->
         
         <div class="cleaner"></div>
         
     </div> <!-- end of templatemo_menu -->
-    
+    {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><img class="middle_img" src="static/images/templatemo_image_03.jpg" alt="image" /><span></span></div>
+    	<div id="middle_img"><img class="middle_img" src="static/images/paul_licking_jason.jpg" alt="image" /><span></span></div>
         
         <div id="m_right">
-	        <h1>Free Website Templates</h1>
-            <p>This is a <a href="http://www.templatemo.com/page/1" target="_parent">multi-color template</a> one page layout provided by <a href="http://www.templatemo.com" target="_parent">templatemo.com</a> for free of charge. There are <a href="http://www.templatemo.com/page/2" target="_parent">2 background graphics</a> provided in the &quot;images&quot; folder. You may choose the one you like. Enjoy!</p>
-          	<a href="#" class="float_r">Details</a>
+	        <h1>Welcome to our Wedding Site!</h1>
+            <p>We are both so happy that you can share our day with us as we settle for each other.  We are going to have a super-fun weekend with lots of fun and surprises along the way!   Or die trying.</p>
 		</div>
     
     </div>
@@ -121,10 +117,10 @@ function clearText(field)
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
-    
+    {% endblock %}
      <div id="templatemo_footer">
     
-        Copyright © 2048 <a href="#">Your Company Name</a> | 
+        Copyright © 2013 <a href="https://github.com/pnichols104">Built by Paul Nichols</a> | 
         Designed by <a href="http://www.templatemo.com/page/1" target="_parent">CSS Templates</a> | 
         Validate <a href="http://validator.w3.org/check?uri=referer">XHTML</a> &amp; 
         		 <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
