--- a/quiz/templates/quiz.html
+++ b/quiz/templates/quiz.html
@@ -29,7 +29,7 @@
         {% endfor %}
         </ol>
         Name: <input type='text' name="name">
-        <input type="submit">
+        <input type="submit" name="quiz_submit">
         </form>
         {% if score %}
         Score:  {{ score }}
