--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -50,12 +50,12 @@ function clearText(field)
                 <ul>
                     <li><a href="/quiz/">Trivia</a></li>
                     <li><a href="#">Photos</a></li>
-                    <li><a href="#" class="last">Our Proposal</a></li>
+                    <li><a href="/proposal/" class="last">Our Proposal</a></li>
                 </ul>
               </li>
               <li><a href="#">Wedding Day</a>
                 <ul>
-                    <li><a href="#">Ceremony/Reception</a></li>
+                    <li><a href="/location/">Ceremony/Reception</a></li>
                     <li><a href="/wedding_party/">Our Wedding Party</a></li>
                     <li><a href="#" class="last">After Party</a></li>
                 </ul>
