--- a/mainsite/templates/weddingparty.html
+++ b/mainsite/templates/weddingparty.html
@@ -19,13 +19,11 @@
         <tr>
             <th colspan="3">Our Officiant</th>
         </tr>
-        <tr>
-            <td>
-            <div class="party_image"><img src="/static/images/ursula_whitehair.jpg" alt="jack_on_bike" /></div>
+        <div class='row'>
+            <div class="party_image"><img src="/static/images/ursula_whitehair.jpg" alt="ursula with white hair" /></div>
             <div class="party_name">Ursula XXVII - Creative Director</div>
             <div class="party_text">Ursula and Paul met at Rutgers where she introduced him to the wonder that is twenty-seven.  Now she lives in DC with her kittens, and specializes in constructing cathouses that travel through time and space.</div>
-            </td>  
-        </tr>
+        </div>
         <tr>
             <th colspan="3">Our Best Men</th>
         </tr>
