completed story templates, need to include error handling for quiz

--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -50,7 +50,7 @@ function clearText(field)
                 <ul>
                     <li><a href="/quiz/">Trivia</a></li>
                     <li><a href="#">Photos</a></li>
-                    <li><a href="/proposal/" class="last">Our Proposal</a></li>
+                    <li><a href="/story/" class="last">Our Story</a></li>
                 </ul>
               </li>
               <li><a href="#">Wedding Day</a>
