--- a/quiz/templates/results.html
+++ b/quiz/templates/results.html
@@ -35,10 +35,7 @@
           {% endfor %}
           </ol>
 
-          </form>
-<!--           {% if score %}
-          Score:  {{ score }} / {{ questions|length }}
-          {% endif %} -->
+        <div><a href="/high_scores/">See how you compare to smarter people!</a></div>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
