--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -48,7 +48,7 @@ function clearText(field)
               <li><a href="/">Home</a></li>
               <li><a href="#">About Us</a>
                 <ul>
-                    <li><a href="/quiz/">Trivia</a></li>
+                    <li><a href="/quiz/">Quiz</a></li>
                     <li><a href="#">Photos</a></li>
                     <li><a href="/story/" class="last">Our Story</a></li>
                 </ul>
