guest book mostly working

--- a/quiz/templates/high_scores.html
+++ b/quiz/templates/high_scores.html
@@ -4,7 +4,7 @@
   {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><iframe width="285" height="186" src="//www.youtube.com/embed/HrLEQmMrRFw?rel=0&start=4&showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+    	<div id="middle_img"><iframe width="285" height="186" src="//www.youtube.com/embed/HrLEQmMrRFw?rel=0&start=4&showinfo=0&modestbranding=1" frameborder="0" allowfullscreen></iframe></div>
         
         <div id="m_right">
 	        <h1>See who knows us best!</h1>
