--- a/quiz/templates/results.html
+++ b/quiz/templates/results.html
@@ -4,7 +4,7 @@
   {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><img class="middle_img" src="/static/images/paul_and_jason_kidney.jpg" alt="image" /><span></span></div>
+    	<div id="middle_img"><img class="middle_img" src="/static/images/paul_and_jason_kidney.jpg" alt="image" /></div>
         
         <div id="m_right">
 	        <h1>Your score was {{ score_percentage }}%.</h1>
@@ -35,7 +35,7 @@
           {% endfor %}
           </ol>
 
-        <div><a href="/high_scores/">See how you compare to smarter people!</a></div>
+        <div><a href="/high_scores/">Click here to see how you compare to smarter people!</a></div>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
