--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -115,12 +115,12 @@ a.more:hover { text-decoration: none; color: #fff; }
 
 #templatemo_menu ul {
 	float: left;
-	width: 700px;
+	width: 800px;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	position: relative;
-	display: inline-table;
+	display: inline;
 }
 
 #templatemo_menu ul li {
@@ -131,8 +131,8 @@ a.more:hover { text-decoration: none; color: #fff; }
 }
 
 #templatemo_menu ul li a {
-/*	float: left;
-*/	display: block;
+	float: left;
+	display: block;
 	height: 27px;
 	padding: 0 30px;
 	margin: 0;
@@ -144,7 +144,6 @@ a.more:hover { text-decoration: none; color: #fff; }
 	outline: none;
 	border: none;
 	background: url(/static/images/templatemo_menu_divider.png) center right no-repeat;
-	position: absolute;
 }
 
 #templatemo_menu ul li a:hover, 
@@ -377,4 +376,103 @@ a.more:hover { text-decoration: none; color: #fff; }
 	text-align: center;
 	padding-bottom: 5px;
 	width: auto;
+}
+
+.thank_you{
+	font-size: 14px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	color: blue;
+}
+
+.guestbook{
+	font-size: 14px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+#message_form{
+	display: none;
+
+
+
+}
+
+.message_header{
+
+}
+
+.message_sender{
+
+}
+
+.message_date{
+	float: right;
+}
+
+.message_body{
+	padding: 15px;
+	font-weight: bold;
+}
+
+.message_response{
+	padding-left: 50px;
+	font-style: italic;
+}
+
+#guest_submit {
+	-moz-box-shadow:inset 0px 1px 15px -1px #bee2f9;
+	-webkit-box-shadow:inset 0px 1px 15px -1px #bee2f9;
+	box-shadow:inset 0px 1px 15px -1px #bee2f9;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #63b8ee), color-stop(1, #468ccf) );
+	background:-moz-linear-gradient( center top, #63b8ee 5%, #468ccf 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf');
+	background-color:#63b8ee;
+	-webkit-border-top-left-radius:20px;
+	-moz-border-radius-topleft:20px;
+	border-top-left-radius:20px;
+	-webkit-border-top-right-radius:20px;
+	-moz-border-radius-topright:20px;
+	border-top-right-radius:20px;
+	-webkit-border-bottom-right-radius:20px;
+	-moz-border-radius-bottomright:20px;
+	border-bottom-right-radius:20px;
+	-webkit-border-bottom-left-radius:20px;
+	-moz-border-radius-bottomleft:20px;
+	border-bottom-left-radius:20px;
+	text-indent:0;
+	border:1px solid #3866a3;
+	display:inline-block;
+	color:#14396a;
+	font-family:Georgia;
+	font-size:18px;
+	font-weight:normal;
+	font-style:italic;
+	height:55px;
+	line-height:55px;
+	width:200px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #7cacde;
+	margin-left: auto;
+	margin-right: auto;
+}
+#guest_submit:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #468ccf), color-stop(1, #63b8ee) );
+	background:-moz-linear-gradient( center top, #468ccf 5%, #63b8ee 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#468ccf', endColorstr='#63b8ee');
+	background-color:#468ccf;
+}#guest_submit:active {
+	position:relative;
+	top:1px;
+}
+
+.container{
+	text-align: center;
+}
+
+#guest_error{
+	display:none;
 }
