--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -34,12 +34,12 @@ function clearText(field)
     <div id="templatemo_header">
 
         
-        <div id="search_box">
+<!--         <div id="search_box">
             <form action="#" method="get">
                 <input type="text" value="Type a keyword &amp; hit enter" name="q" size="10" 
                 id="searchfield" title="searchfield" onfocus="clearText(this)" onblur="clearText(this)" />
             </form>
-        </div>
+        </div> -->
         
     </div>
     
@@ -66,6 +66,7 @@ function clearText(field)
                     <li><a href="#" class="last">Lodging</a></li>
                 </ul>
               </li>
+              <li><a href="/guestbook/">Guestbook</a></li>
               <li><a href="mailto:paulandjason27@gmail.com" target="_blank" class="last">Contact Us</a></li>
         </ul>   
      
@@ -77,7 +78,7 @@ function clearText(field)
         
     </div> <!-- end of templatemo_menu -->
   
-    <div style="display:none">
+<!--     <div style="display:none">
         {% if form.errors %}
             <p id="error">{{ error_message }}
         {% endif %}
@@ -113,7 +114,7 @@ function clearText(field)
             <input type="password" name="password" value="" id="password">
             <input type="submit" name="login" value="Log In" />
         </form>
-    </div>
+    </div> -->
 
     {% block content %}
     <div id="templatemo_middle">
@@ -185,7 +186,7 @@ function clearText(field)
     {% endblock %}
      <div id="templatemo_footer">
     
-        Copyright © 2013 <a href="https://github.com/pnichols104">Built by Paul Nichols</a> | 
+        Copyright © 2013 <a href="https://github.com/pnichols104/wedding-website">Built by Paul Nichols</a> | 
         Designed by <a href="http://www.templatemo.com/page/1" target="_parent">CSS Templates</a>
     
     </div> <!-- end of templatemo_footer -->
