--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -131,8 +131,8 @@ function clearText(field)
     <div id="templatemo_content">
     	
         <div class="content_box">
-        	<h2>Welcome to Multi-Color Template</h2>
-            <p>Credit goes to <a href="http://www.photovaco.com" target="_blank">PhotoVaco</a> for photos used in this template. Ut sodales libero ut odio. Maecenas venenatis metus eu est. In sed risus ac felis varius bibendum. Nulla imperdiet congue metus. Tincidunt vitae, sagittis vel, interdum at, erat. Duis vitae velit. Ut ultricies. Fusce sollicitudin nisl a lectus. Pellentesque odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        	<h2>Time until the big day!</h2>
+            <span id="countdown"></span>
         </div>
         
         <div class="content_box last">
