--- a/mainsite/templates/location.html
+++ b/mainsite/templates/location.html
@@ -7,8 +7,8 @@
     	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_3babies2.jpg" alt="image" /><span></span></div>
         
         <div id="m_right">
-	        <h1>Our Wedding Party</h1>
-            <p>We wouldn't be able to do this without the support of some of our closest friends and family, who are regretting agreeing to this more every day.</p>
+	        <h1>Ceremony & Reception</h1>
+            <p>Jason got to pick where the wedding will be, so since that's the biggest decision Paul gets to be in charge of everything else.  Fair is fair.</p>
           	
 		</div>
     
