--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -72,8 +72,8 @@ function clearText(field)
      
 <!--         <div id="login">
             <a id="login_fancy" title="Login" href="#login_form">Login</a> or <a id="newuser_fancy" title="Newuser" href="#newuser_form">Register</a>-->
-        </div> 
-        
+<!--         </div> 
+ -->        
         <div class="cleaner"></div>
         
     </div> <!-- end of templatemo_menu -->
