--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -131,8 +131,10 @@ function clearText(field)
     <div id="templatemo_content">
     	
         <div class="content_box">
-        	<h2>Time until the big day!</h2>
-            <span id="countdown"></span>
+            <div id="countdown_container">
+        <h1>Countdown until the main event!</h1>
+            <div id="countdown"><h2></h2></div>
+        </div>
         </div>
         
         <div class="content_box last">
