--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -21,9 +21,9 @@ a:hover { color: #0066CC; text-decoration: underline; }
 p { margin: 0 0 10px 0; padding: 0; }
 img { border: none; }
 
-h1, h2, h3, h4, h5, h6 { color: #333; font-weight: normal; font-family: Georgia, "Times New Roman", Times, serif }
-h1 { font-size: 28px; margin: 0 0 30px 0; padding: 5px 0; }
-h2 { font-size: 25px; margin: 0 0 20px 0; padding: 10px 0 10px 60px; background: url(/static/images/templatemo_header.png) no-repeat center left }
+h1, h2, h3, h4, h5, h6, #countdown { color: #333; font-weight: normal; font-family: Georgia, "Times New Roman", Times, serif }
+h1 { font-size: 28px;}
+h2, #countdown { font-size: 25px;}
 h3 { font-size: 22px; margin: 0 0 15px; padding: 0; }
 h4 { font-size: 18px; margin: 0 0 15px; padding: 0; }
 h5 { font-size: 16px; margin: 0 0 10px; padding: 0;  }
@@ -103,6 +103,13 @@ a.more:hover { text-decoration: none; color: #fff; }
 #search_box form { clear: both; width: 205px; height: 33px; padding: 0; } 
 #searchfield { height: 23px; width: 170px; padding: 5px; color: #fff; background: none; border: none; }
 
+#countdown_container{
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+	width: 500px;
+	text-align: center;
+}
 /* menu */
 
 #templatemo_menu {
