working on photo album

--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -1,4 +1,4 @@
-
+<!-- TODO report a bug/feedback/about this site -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -49,7 +49,7 @@ function clearText(field)
               <li><a href="#">About Us</a>
                 <ul>
                     <li><a href="/quiz/">Quiz</a></li>
-                    <li><a href="#">Photos</a></li>
+                    <li><a href="/photos/">Photos</a></li>
                     <li><a href="/story/" class="last">Our Story</a></li>
                 </ul>
               </li>
