--- a/mainsite/templates/weddingparty.html
+++ b/mainsite/templates/weddingparty.html
@@ -4,7 +4,7 @@
   {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_3babies2.jpg" alt="image" /><span></span></div>
+    	<div id="middle_img"><img class="middle_img" src="/static/images//paul_jason_3babies2.jpg" alt="image" /><span></span></div>
         
         <div id="m_right">
 	        <h1>Our Wedding Party</h1>
@@ -15,81 +15,95 @@
     </div>
     
     <div id="templatemo_content">
-       <table id="wedding_party" border="1">
-        <tr>
-            <th colspan="3">Our Officiant</th>
-        </tr>
-        <div class='row'>
-            <td>
-            <div class="party_image"><img src="/static/images/ursula_whitehair.jpg" alt="ursula with white hair" /></div>
+       <div id="wedding_party_container">
+        <div class='wedding_party_row'>
+        <div class='wedding_party_row_contents'>
+        <div class = 'wedding_party_header'>
+            Our Officiant
+        </div>
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/ursula_whitehair.jpg" alt="ursula with white hair" /></div>
 
             <div class="party_name">Ursula XXVII - Creative Director</div>
             <div class="party_text">Ursula and Paul met at Rutgers where she introduced him to the wonder that is twenty-seven.  Now she lives in DC with her kittens, and specializes in constructing cathouses that travel through time and space.</div>
-            </td>
+            </div>
         </div>
-        <tr>
-            <th colspan="3">Our Best Men</th>
-        </tr>
-        <tr>
-            <td>
-            <div class="party_image"><img src="/static/images/minardi_pretty.jpg" alt="He's so pretty." /></div>
+    </div>
+        <div class='wedding_party_row'>
+        <div class='wedding_party_row_contents'>
+        <div class='wedding_party_header'>
+            Our Best Men
+        </div>
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/minardi_pretty.jpg" alt="He's so pretty." /></div>
             <div class="party_name">Minardi - Princess DaintyPants</div>
             <div class="party_text">One of Paul and Jason's closest friends, Minardi is also the meanest.  Expect him to judge you and make snide comments about all aspects of the wedding.  That's why we love him.</div>
-            </td>  
-            <td>
-            <div class="party_image"><img src="/static/images/matt_funnyface.jpg" alt="the best picture of Matt we could find" /></div>
+            </div>  
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/matt_funnyface.jpg" alt="the best picture of Matt we could find" /></div>
             <div class="party_name">Matt - VP of Awesome</div>
             <div class="party_text">Matt is like a brother to Paul, mostly due to the fact that he is.</div>
-            </td>  
-        </tr>
-        <tr >
-            <th colspan="3">The Entourage</th>
-        </tr>
-        <tr>
-            <td>
-            <div class="party_image"><img src="/static/images/megan_italy.jpg" alt="Megan in Italy" /></div>
+            </div>  
+        </div>
+    </div>
+        <div class='wedding_party_row'>
+        <div class='wedding_party_row_contents'>
+        <div class = 'wedding_party_header'>
+            The Entourage
+        </div>
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/megan_italy.jpg" alt="Megan in Italy" /></div>
             <div class="party_name">Megan - The Chief Justice</div>
             <div class="party_text">Megan went to both high school and college with Paul, yet somehow that wasn't enough for her to run screaming. Now Paul and Jason are relying on her to bring the smackdown on any wedding vendor that doesn't do what he or she is supposed to.  (Seriously, don't cross Megan.) </div>
-            </td>   
-            <td>
-            <div class="party_image"><img src="/static/images/kate.jpg" alt="jack_on_bike" /></div>
+            </div>   
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/kate.jpg" alt="jack_on_bike" /></div>
             <div class="party_name">Kate - Chief Science Officer</div>
             <div class="party_text">It's no exaggeration to say Kate was Paul's first real friend, who he probably wouldn't have survived high school without.  Now, after <span class='strikeout'>19</span> <span class='strikeout'>11</span> <span class='strikeout'>15</span> none-of-your-business years, she remains one of Paul's closest (and craziest) friends.  </div>
-            </td>  
-        </tr>
-        <tr>
-            <td>
-            <div class="party_image"><img src="/static/images/frank_goggles.jpg" alt="Frank going for a swim" /></div>
+            </div>  
+        </div>
+    </div>
+        <div class='wedding_party_row'>
+            <div class='wedding_party_row_contents'>
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/frank_goggles.jpg" alt="Frank going for a swim" /></div>
             <div class="party_name">Frank - Consultant of Epicness</div>
             <div class="party_text">Frank is Jason's brother-in-law, and father to the three adorable monkeys below. Paul and Jason included him in the wedding not just because he's important to them, but also because they figure there will be lots of opportunities to make him uncomfortable.</div>
-            </td>   
-            <td>
-            <div class="party_image"><img src="/static/images/steve_hanging.jpg" alt="Steve hanging around" /></div>
+            </div>   
+            <div class='wedding_party_member'>
+            <div class="party_image"><img src="/static/images/wedding_party/steve_hanging.jpg" alt="Steve hanging around" /></div>
             <div class="party_name">Steve - Senior Rockstar Extraordinaire</div>
-            <div class="party_text">Steve is Jason's cousin.  We're not really sure what's going on in this picture, but have learned to not ask questions.</div>
-            </td>  
-        </tr>
-        <tr>
-            <th colspan="3">Monkeys</th>
-        </tr>
-        <tr>
-            <td>
-            <div class="party_image"><img src="/static/images/sophia_climbing.jpg" alt="Sophia climbing the wall" /></div>
-            <div class="party_name">Sophia - Queen of All Things, Jr.</div>
-            <div class="party_text">She's both beautiful and brilliant, and the whole wedding is really just an excuse for her to get dolled up and tell people what to do.</div>
-            </td>  
-            <td>
-            <div class="party_image"><img src="/static/images/jack_bicycle.jpg" alt="jack_on_bike" /></div>
-            <div class="party_name">Jackson - Evil Genius</div>
-            <div class="party_text">Jack is pretty tough.  With an older sister to keep up with and a baby brother to look after, he barely has time for his plans of world domination.</div>
-            </td>  
-            <td>
-            <div class="party_image"><img src="/static/images/jacob_chocolate.jpg" alt="Jacob covered in chocolate." /></div>
-            <div class="party_name">Jacob - Sergeant-At-Arms</div>
-            <div class="party_text">Don't let those chubby cheeks fool you.  This kid is ten pounds of kickass in a five-pound diaper.</div>
-            </td>  
-        </tr>          
-    </table>
+            <div class="party_text">Steve is Jason's cousin.  We're not really sure what's going on in this picture, but have learned not ask questions.</div>
+            </div>  
+        </div>
+        </div> 
+        <div class='wedding_party_row'>
+        <div class='wedding_party_row_contents'>
+        <div class = 'wedding_party_header'>
+            Monkeys
+        </div>
+        </div>
+
+        <div class='wedding_party_row'>
+
+            <div class='wedding_party_member'>
+                <div class="party_image"><img src="/static/images/wedding_party/sophia_climbing.jpg" alt="Sophia climbing the wall" /></div>
+                <div class="party_name">Sophia - Queen of All Things, Jr.</div>
+                <div class="party_text">She's both beautiful and brilliant, and the whole wedding is really just an excuse for her to get dolled up and tell people what to do.</div>
+            </div>  
+            <div class='wedding_party_member'>
+                <div class="party_image"><img src="/static/images/wedding_party/jack_bicycle.jpg" alt="jack_on_bike" /></div>
+                <div class="party_name">Jackson - Evil Genius</div>
+                <div class="party_text">Jack is pretty tough.  With an older sister to keep up with and a baby brother to look after, he barely has time for his plans of world domination.</div>
+            </div>  
+            <div class='wedding_party_member'>
+                <div class="party_image"><img src="/static/images/wedding_party/jacob_chocolate.jpg" alt="Jacob covered in chocolate." /></div>
+                <div class="party_name">Jacob - Sergeant-At-Arms</div>
+                <div class="party_text">Don't let those chubby cheeks fool you.  This kid is ten pounds of kickass in a five-pound diaper.</div>
+            </div>  
+        </div>
+        </div>          
+    </div>
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
